--- a/views/car-details.ejs
+++ b/views/car-details.ejs
@@ -52,7 +52,7 @@
                             <% if (locals.isOwner) { %>
                                 <span class="badge bg-success-subtle text-success border border-success-subtle px-3 py-2">E mașina ta</span>
                             <% } else { %>
-                                <a href="/chat/private/<%= car.ownerEmail %>" class="btn btn-primary btn-lg rounded-circle shadow d-flex align-items-center justify-content-center" style="width: 55px; height: 55px;">
+                                <a href="/chat/private/<%= car._id %>" class="btn btn-primary btn-lg rounded-circle shadow d-flex align-items-center justify-content-center" style="width: 55px; height: 55px;">
                                     <i class="bi bi-chat-dots-fill fs-4"></i>
                                 </a>
                             <% } %>
